STORM-2406 [Storm SQL] Change underlying API to Streams API
* This will enable us to provide windowed aggregation, join, etc.
  * Tuple-to-tuple is making more sense than micro-batch in these cases
* Tested with several sql cases
* Also bump Calcite version to 1.14.0
  * Fix checkstyle issues a bit: not doing exhaustively
* Update diagrams in storm-sql internal doc
  * Also add XML type of exported diagrams as well to restore diagram from draw.io